[package]
name = "xcb-keystore"
version = "0.5.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A minimalist library to interact with encrypted JSON keystores"
documentation = "https://docs.rs/xcb-keystore"
repository = "https://github.com/roynalnaruto/xcb-keystore-rs"
readme = "README.md"
keywords = ["core-coin", "web3", "wallet"]
exclude = ["tests/test-keys/*"]

[dependencies]
aes = "0.8.0"
ctr = "0.9.0"
digest = "0.10.0"
hex = "0.4.2"
hmac = "0.12.0"
pbkdf2 = { version = "0.11", default-features = false }
rand = "0.8.5"
scrypt = { version = "0.10.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4"
sha2 = "0.10.1"
sha3 = "0.10.0"
thiserror = { version = "1.0.22", default-features = false }
uuid = { version = "1.0", features = ["serde", "v4"] }
tiny-keccak = {version = "2.0.2", features = ["sha3"]} 
corebc-core = { git = "https://github.com/core-coin/corebc-rs.git", default-features = false}

ethereum-types = { git = "https://github.com/core-coin/core-common.git", version = "0.14.1", default-features = true, features = ["rlp"]}
libgoldilocks = { git = "https://github.com/core-coin/ed448-rs.git", branch = "fix/public_errors" }
